force-app/main/default/objects/vlocity_ins__ProviderNetworkFormularyDrugPrice__c/fields/vlocity_ins__FormularyDrugId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__FormularyDrugId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Formulary Drug</label>
    <referenceTo>vlocity_ins__FormularyDrug__c</referenceTo>
    <relationshipLabel>Provider Network Formulary Drugs Price</relationshipLabel>
    <relationshipName>ProviderNetworkFormularyDrugsPrice</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>