force-app/main/default/objects/vlocity_ins__ProviderNetworkFormularyDrugPrice__c/fields/vlocity_ins__NegotiatedPrice__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__NegotiatedPrice__c</fullName>
    <label>Negotiated Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>