force-app/main/default/objects/vlocity_ins__ProviderNetworkFormularyDrugPrice__c/fields/vlocity_ins__ProviderNetworkId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ProviderNetworkId__c</fullName>
    <label>Provider Network</label>
    <referenceTo>vlocity_ins__ProviderNetwork__c</referenceTo>
    <relationshipLabel>Provider Network Formulary Drugs Price</relationshipLabel>
    <relationshipName>ProviderNetworkFormularyDrugsPrice</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>